<resources>
    <string name="app_name">PetDiary</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_camera">Camera</string>
    <string name="title_schedule">Schedule</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="time">Time</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="start_date_time"><![CDATA[Start Date & Time]]></string>
    <string name="end_date_time"><![CDATA[End Date & Time]]></string>
</resources>