<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.petdiary.ui.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.petdiary.ui.view.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.example.petdiary.ui.view.ScheduleFragment"
        android:label="@string/title_schedule"
        tools:layout="@layout/fragment_schedule">
        <action
            android:id="@+id/action_scheduleFragment_to_addAppointmentFragment"
            app:destination="@id/addAppointmentFragment" />
    </fragment>

    <fragment
        android:id="@+id/addAppointmentFragment"
        android:name="com.example.petdiary.ui.view.AddAppointmentFragment"
        tools:layout="@layout/fragment_add_appointment" />
</navigation>