<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?android:attr/windowBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@drawable/background_card"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="4dp"
        android:backgroundTint="@android:color/white"
        android:divider="?android:dividerVertical"
        android:showDividers="middle">

        <EditText
            android:id="@+id/et_appointment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="12dp"
            android:textColor="@android:color/black"
            android:backgroundTint="?android:attr/colorAccent"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-medium"
            android:drawablePadding="8dp" />

        <TextView
            android:id="@+id/tv_start_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_date_time"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/start_appointment_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:focusable="false"
                android:clickable="true"
                android:layout_weight="1"
                android:padding="12dp"
                android:backgroundTint="?android:attr/colorAccent"
                android:textColor="@android:color/black"
                android:drawablePadding="8dp" />

            <EditText
                android:id="@+id/start_appointment_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:focusable="false"
                android:clickable="true"
                android:layout_weight="1"
                android:padding="12dp"
                android:backgroundTint="?android:attr/colorAccent"
                android:textColor="@android:color/black"
                android:drawablePadding="8dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_end_date_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_date_time"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/end_appointment_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/date"
                android:focusable="false"
                android:clickable="true"
                android:layout_weight="1"
                android:padding="12dp"
                android:backgroundTint="?android:attr/colorAccent"
                android:textColor="@android:color/black"
                android:drawablePadding="8dp" />

            <EditText
                android:id="@+id/end_appointment_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/time"
                android:focusable="false"
                android:clickable="true"
                android:layout_weight="1"
                android:padding="12dp"
                android:backgroundTint="?android:attr/colorAccent"
                android:textColor="@android:color/black"
                android:drawablePadding="8dp" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="220dip"
            android:background="@drawable/content_background"
            android:layout_marginTop="16dp"
            android:padding="16dp">
            <EditText
                android:id="@+id/et_appointment_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:maxHeight="220dp"
                android:maxLines="20"
                android:padding="12dp"
                android:lineSpacingExtra="4dp"
                android:backgroundTint="?android:attr/colorAccent"
                android:textColor="@android:color/black"
                android:drawablePadding="8dp"
                android:fontFamily="sans-serif-medium"
                android:layout_gravity="center"/>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btn_save_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/holo_blue_light"
                android:fontFamily="sans-serif-medium" />

            <Button
                android:id="@+id/btn_cancel_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                android:backgroundTint="@android:color/holo_red_dark"
                android:fontFamily="sans-serif-medium" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
